syntax = "proto3";

package pb;


option go_package = "barbershop/src/pb/barber";

message ServiceDetail {
    string category_id = 2;
    string name_category = 8;
    string id = 1;
    string name = 3;
    optional int32 timer = 4;
    optional float price = 5;
    optional string description = 6;
    optional string image = 7;
}